--- a/index.html
+++ b/index.html
@@ -186,17 +186,16 @@
                     </div>
                 </div>
             </div>
-
             <!-- template  -->
             <template class="js-template">
                 <li
-                    class="border border-zinc-800 bg-zinc-800 w-[270px] p-2 rounded hover:cursor-pointer ease-in duration-200 js-items">
+                    class="border border-zinc-800 bg-zinc-800 w-[270px] min-h-[460px] p-2 rounded hover:cursor-pointer ease-in duration-200 js-items">
                     <img
                         class="js-movies-img min-h-[190px] rounded m-auto w-full"
                         src
                         alt>
                     <h3
-                        class="js-movies-title text-3xl mt-2"></h3>
+                        class="js-movies-title text-3xl mt-2 "></h3>
                     <div
                         class="italic flex items-center my-2">
                         <i
@@ -216,7 +215,7 @@
                         More
                         info</button>
                     <button
-                        class="w-full p-2 bg-yellow-600 rounded"> <i
+                        class="w-full p-2 bg-yellow-500 rounded"> <i
                             class="fa-regular fa-address-book"></i>
                         Add</button>
                 </li>
