--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                             ?</p>
                         <ul
                             class="js-movies-result text-white mt-9 flex items-center justify-center  gap-x-11 flex-wrap gap-y-8">
+                            <img class="top-[50%]"
+                                src="./src/images/Spinner-1.7s-102px.gif"
+                                alt="loading">
                         </ul>
                     </div>
                 </div>
